--- a/example/web/index.html
+++ b/example/web/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter application.">
+  <meta name="description" content="Demonstrates how to use the sk_numberpad plugin.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="example">
+  <meta name="apple-mobile-web-app-title" content="sk_numberpad_example">
   <link rel="apple-touch-icon" href="/icons/Icon-192.png">
 
-  <title>example</title>
+  <title>sk_numberpad_example</title>
   <link rel="manifest" href="/manifest.json">
 </head>
 <body>
